Bug 1746774: Update monitors on Windows during WM_SETTINGCHANGE/SPI_SETWORKAREA r=emilio

This corrects erroneous values we sometimes get from EnumDisplayMonitors during WM_DISPLAYCHANGE.  The issue is that adding/removing a display or moving the taskbar can cause the screen availRect values obtained from Windows to be incorrect.

Differential Revision: https://phabricator.services.mozilla.com/D145111